--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "langchain>=1.2.4",
     "langchain-groq>=1.1.1",
     "langchain-mcp-adapters>=0.2.1",
     "langgraph>=1.0.6",
